--- a/src/partials/50_section-products.html
+++ b/src/partials/50_section-products.html
@@ -2,9 +2,7 @@
   <div class="container">
     <div class="panel-bar">
       <div class="row no-gutters align-items-end">
-        <div class="col-sm-12 col-md-3 heading">
-          <h3>New furniture</h3>
-        </div>
+        <div class="col-sm-12 col-md-3 heading"><h3>New furniture</h3></div>
         <div class="col-sm-12 col-md-7 menu">
           <ul>
             <li><a href="#" class="active">Bed</a></li>
@@ -25,7 +23,9 @@
                 <div class="sale">sale</div>
                 <div class="buttons">
                   <a href="#" class="btn-main-small">Quick View</a>
-                  <a href="#" class="btn-main-small"><i class="fa fa-shopping-basket"></i> ADD TO CART</a>
+                  <a href="#" class="btn-main-small"
+                    ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
+                  >
                 </div>
               </div>
               <div class="content">
@@ -38,8 +38,12 @@
               <div class="line"></div>
               <div class="actions">
                 <div class="outlines">
-                  <a href="#" class="btn-outline active"><i class="far fa-heart"></i></a>
-                  <a href="#" class="btn-outline active"><i class="fas fa-exchange-alt"></i></a>
+                  <a href="#" class="btn-outline active"
+                    ><i class="far fa-heart"></i
+                  ></a>
+                  <a href="#" class="btn-outline active"
+                    ><i class="fas fa-exchange-alt"></i
+                  ></a>
                 </div>
                 <div class="price">
                   <div class="btn-main-small no-hover">$ 30.00</div>
@@ -103,7 +107,9 @@
               <div class="actions">
                 <div class="outlines">
                   <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
-                  <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
+                  <a href="#" class="btn-outline"
+                    ><i class="fas fa-exchange-alt"></i
+                  ></a>
                 </div>
                 <div class="price">
                   <div class="btn-main-small no-hover old-price">$ 30.00</div>
@@ -175,111 +181,107 @@
               </div>
             </div>
           </div>
-          <div class="line"></div>
-          <div class="actions">
-            <div class="outlines">
-              <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
-              <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
-            </div>
-            <div class="price">
-              <div class="btn-main-small no-hover">$ 120.00</div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="carousel-cell">
-        <div class="product-box">
-          <div class="photo pic-6">
-            <div class="sale">sale</div>
-            <div class="buttons">
-              <a href="#" class="btn-main-small">Quick View</a>
-              <a href="#" class="btn-main-small"
-                ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
-              >
-            </div>
-          </div>
-          <div class="content">
-            <h5>Aenean Ru Bristique</h5>
-            <div class="stars">
-              <a href="#" class="full"></a> <a href="#" class="full"></a>
-              <a href="#"></a> <a href="#"></a> <a href="#"></a>
-            </div>
-          </div>
-          <div class="line"></div>
-          <div class="actions">
-            <div class="outlines">
-              <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
-              <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
-            </div>
-            <div class="price">
-              <div class="btn-main-small no-hover">$ 100.00</div>
-            </div>
-            <div class="price">
-              <div class="btn-main-small no-hover old-price">$ 120.00</div>
+          <div class="carousel-cell">
+            <div class="product-box">
+              <div class="photo pic-6">
+                <div class="sale">sale</div>
+                <div class="buttons">
+                  <a href="#" class="btn-main-small">Quick View</a>
+                  <a href="#" class="btn-main-small"
+                    ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
+                  >
+                </div>
+              </div>
+              <div class="content">
+                <h5>Aenean Ru Bristique</h5>
+                <div class="stars">
+                  <a href="#" class="full"></a> <a href="#" class="full"></a>
+                  <a href="#"></a> <a href="#"></a> <a href="#"></a>
+                </div>
+              </div>
+              <div class="line"></div>
+              <div class="actions">
+                <div class="outlines">
+                  <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
+                  <a href="#" class="btn-outline"
+                    ><i class="fas fa-exchange-alt"></i
+                  ></a>
+                </div>
+                <div class="price">
+                  <div class="btn-main-small no-hover">$ 100.00</div>
+                </div>
+                <div class="price">
+                  <div class="btn-main-small no-hover old-price">$ 120.00</div>
+                </div>
+              </div>
             </div>
           </div>
-        </div>
-      </div>
-      <div class="carousel-cell">
-        <div class="product-box">
-          <div class="photo pic-7">
-            <div class="sale">sale</div>
-            <div class="buttons">
-              <a href="#" class="btn-main-small">Quick View</a>
-              <a href="#" class="btn-main-small"
-                ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
-              >
-            </div>
-          </div>
-          <div class="content">
-            <h5>Aenean Ru Bristique</h5>
-            <div class="stars">
-              <a href="#" class="full"></a> <a href="#" class="full"></a>
-              <a href="#"></a> <a href="#"></a> <a href="#"></a>
-            </div>
-          </div>
-          <div class="line"></div>
-          <div class="actions">
-            <div class="outlines">
-              <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
-              <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
-            </div>
+          <div class="carousel-cell">
+            <div class="product-box">
+              <div class="photo pic-7">
+                <div class="sale">sale</div>
+                <div class="buttons">
+                  <a href="#" class="btn-main-small">Quick View</a>
+                  <a href="#" class="btn-main-small"
+                    ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
+                  >
+                </div>
+              </div>
+              <div class="content">
+                <h5>Aenean Ru Bristique</h5>
+                <div class="stars">
+                  <a href="#" class="full"></a> <a href="#" class="full"></a>
+                  <a href="#"></a> <a href="#"></a> <a href="#"></a>
+                </div>
+              </div>
+              <div class="line"></div>
+              <div class="actions">
+                <div class="outlines">
+                  <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
+                  <a href="#" class="btn-outline"
+                    ><i class="fas fa-exchange-alt"></i
+                  ></a>
+                </div>
 
-            <div class="price">
-              <div class="btn-main-small no-hover">$ 30.00</div>
+                <div class="price">
+                  <div class="btn-main-small no-hover">$ 30.00</div>
+                </div>
+              </div>
             </div>
           </div>
-        </div>
-      </div>
-      <div class="carousel-cell">
-        <div class="product-box">
-          <div class="photo pic-8">
-            <div class="sale">sale</div>
-            <div class="buttons">
-              <a href="#" class="btn-main-small">Quick View</a>
-              <a href="#" class="btn-main-small"
-                ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
-              >
-            </div>
-          </div>
-          <div class="content">
-            <h5>Aenean Ru Bristique</h5>
-            <div class="stars">
-              <a href="#" class="full"></a> <a href="#" class="full"></a>
-              <a href="#"></a> <a href="#"></a> <a href="#"></a>
-            </div>
-          </div>
-          <div class="line"></div>
-          <div class="actions">
-            <div class="outlines">
-              <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
-              <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
-            </div>
-            <div class="price">
-              <div class="btn-main-small no-hover">$ 100.00</div>
-            </div>
-            <div class="price">
-              <div class="btn-main-small no-hover old-price">$ 120.00</div>
+          <div class="carousel-cell">
+            <div class="product-box">
+              <div class="photo pic-8">
+                <div class="sale">sale</div>
+                <div class="buttons">
+                  <a href="#" class="btn-main-small">Quick View</a>
+                  <a href="#" class="btn-main-small"
+                    ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
+                  >
+                </div>
+              </div>
+              <div class="content">
+                <h5>Aenean Ru Bristique</h5>
+                <div class="stars">
+                  <a href="#" class="full"></a> <a href="#" class="full"></a>
+                  <a href="#"></a> <a href="#"></a> <a href="#"></a>
+                </div>
+              </div>
+              <div class="line"></div>
+              <div class="actions">
+                <div class="outlines">
+                  <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
+                  <a href="#" class="btn-outline"
+                    ><i class="fas fa-exchange-alt"></i
+                  ></a>
+                </div>
+                <div class="price">
+                  <div class="btn-main-small no-hover">$ 100.00</div>
+                </div>
+                <div class="price">
+                  <div class="btn-main-small no-hover old-price">$ 120.00</div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
