--- a/src/sass/components/_panel-bar.scss
+++ b/src/sass/components/_panel-bar.scss
@@ -33,7 +33,7 @@
 
   .menu {
     text-align: center;
-    margin-right: 70px;
+    margin-right: 0;
     ul {
       margin: 0;
       padding: 0;
@@ -64,6 +64,9 @@
           }
         }
       }
+    }
+    @media (min-width: 1200px) {
+      margin-right: 120px;
     }
   }
 
