--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -20,6 +20,7 @@
 @import "components/section--feedback";
 @import "components/section--features";
 @import "components/section--promoted";
+@import "components/section--products";
 
 body {
   font-family: "Poppins", sans-serif;
