--- a/src/sass/components/_section--promoted.scss
+++ b/src/sass/components/_section--promoted.scss
@@ -29,8 +29,9 @@
       }
 
       .hot-deals-carousel {
-        max-height: 458px;
-        height: 100%;
+        .flickity-viewport {
+          height: 457px !important;
+        }
 
         .flickity-page-dots .dot {
           display: inline-block;
@@ -43,6 +44,7 @@
           opacity: 0.25;
           cursor: pointer;
         }
+
         .flickity-page-dots {
           position: absolute;
           width: 100%;
@@ -55,6 +57,7 @@
           right: -133px;
           top: -33px;
         }
+
         .flickity-page-dots .dot.is-selected {
           opacity: 1 !important;
           background-color: $primary !important;
@@ -311,7 +314,8 @@
 
       .navi-buttons {
         display: flex;
-        width: 750px;
+        max-width: 750px;
+        width: 100%;
         height: 40px;
         position: absolute;
         left: 0;
@@ -336,326 +340,162 @@
     }
   }
 }
-.promoted-box {
-  display: flex;
-  justify-content: space-between;
 
-  .hot-deals {
-    max-width: 361px;
-    width: 100%;
-    height: 507px;
+@media (min-width: 992px) and (max-width: 1199px) {
+  .promoted-box {
+    .hot-deals {
+      max-width: 330px !important;
+      width: 100%;
 
-    .hot-deals-header {
-      height: 50px;
-      background-color: $footer-claim-bg;
-      display: flex;
-      flex-wrap: wrap;
-      color: $white;
-      justify-content: space-between;
-      align-items: center;
-
-      p {
-        margin: 0;
-        font-size: 18px;
-        font-weight: 600;
-        padding-left: 24px;
+      .hot-deals-header {
+        p {
+          padding-left: 10px !important;
+        }
       }
 
-      .points-box {
-        display: flex;
-        padding-right: 14px;
-
-        .active {
-          background-color: $primary !important;
+      .hot-deals-carousel {
+        .flickity-viewport {
+          height: 457px !important;
         }
 
-        .point {
-          width: 13px;
-          height: 13px;
-          background-color: $white;
-          border-radius: 50px;
-          border: none;
-          margin-right: 8px;
-          cursor: pointer;
+        .images {
+          img {
+            width: 330px !important;
+          }
         }
       }
     }
 
-    .hot-deals-carousel {
-      max-height: 458px;
-      height: 100%;
+    .highlighted-product {
+      max-width: 630px !important;
 
-      .images {
-        width: 100%;
-        max-width: 360px;
-        height: 100%;
-        max-height: 458px;
-        position: relative;
-        border: 1px solid $promoted-line-grey;
+      .title {
+        max-width: 630px !important;
+      }
 
-        img {
-          width: 358px;
-          height: 290px;
-        }
+      h1 {
+        left: 58px !important;
+      }
 
-        &:hover {
-          .add-to-cart,
-          .counter {
-            opacity: 1;
-          }
-        }
+      .second {
+        left: 276px !important;
+      }
 
-        .add-to-cart {
-          display: flex;
-          align-items: center;
-          justify-content: space-around;
-          height: 37px;
-          width: 132px;
-          background-color: $footer-claim-bg;
-          color: $white;
-          font-size: 13px;
-          position: absolute;
-          left: 112px;
-          top: 95px;
-          cursor: pointer;
-          opacity: 0;
-          transition-duration: 0.2s;
+      .third {
+        left: 133px !important;
+      }
 
-          p {
-            margin: 0;
-            font-weight: 500;
-          }
+      .shop-now {
+        left: 256px !important;
+      }
 
-          i {
-            font-size: 16px;
-          }
-        }
+      .navi-buttons {
+        max-width: 630px !important;
+      }
+    }
+  }
+}
 
-        .counter {
-          justify-content: space-around;
-          padding: 0 38px;
-          position: relative;
-          bottom: 83px;
-          opacity: 0;
-          transition-duration: 0.2s;
+@media (min-width: 768px) and (max-width: 991px) {
+  .promoted-box {
+    .hot-deals {
+      display: none;
+    }
+  }
+}
 
-          .circle {
-            background-color: $promoted-counter;
-            width: 70px;
-            height: 70px;
-            border-radius: 50px;
-            color: $white;
-            text-align: center;
-            cursor: default;
+@media (max-width: 767px) {
+  .promoted-box {
+    .hot-deals {
+      display: none;
+    }
 
-            h4 {
-              width: 100%;
-              font-size: 24px;
-              font-weight: 600;
-              padding-top: 12px;
-              margin: 0;
-            }
+    .highlighted-product {
+      height: 398px !important;
 
-            h6 {
-              font-size: 13px;
-              font-weight: 600;
-            }
+      .products-carousel {
+        height: 362px !important;
+
+        .carousel-cell {
+          width: 100%;
+          height: 352px;
+
+          img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
           }
         }
       }
 
       .title {
-        margin: 0 0 18px 0;
-        font-weight: 500;
-        padding-top: 18px;
+        height: 168px !important;
+        bottom: 260px !important;
       }
 
-      .stars-line {
-        justify-content: center;
-
-        i {
-          padding-right: 2px;
-        }
-
-        .far {
-          color: $promoted-icon-grey;
-        }
-
-        .fas {
-          color: $black;
-        }
+      h1 {
+        left: 66px !important;
+        top: 145px !important;
+        font-size: 40px !important;
       }
 
-      .line {
-        border-bottom: 1px solid $promoted-counter;
-        margin: 20px 15px;
-        position: relative;
-
-        &:before {
-          content: "";
-          position: absolute;
-          width: 30px;
-          left: 146px;
-          top: -2px;
-          border-bottom: 5px solid $primary;
-        }
+      .second {
+        left: 240px !important;
+        top: 145px !important;
       }
 
-      .price-line {
-        display: flex;
-        justify-content: space-between;
-
-        .icons {
-          display: flex;
-          padding-right: 0;
-
-          .icon-box {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 37px;
-            width: 37px;
-            border: 1px solid $black;
-            margin-right: 7px;
-            cursor: pointer;
-            transition-duration: 0.2s;
-
-            &:hover {
-              background-color: $primary;
-              border-color: $primary;
-              color: $white;
-            }
-          }
-        }
-
-        .prices {
-          display: flex;
-          align-items: center;
-          justify-content: flex-end;
-
-          h6 {
-            margin: 0;
-            font-size: 18px;
-            font-weight: 400;
-            color: $promoted-icon-grey;
-          }
-
-          .actual-price {
-            background-color: $promoted-counter;
-            padding: 8px;
-            margin-left: 5px;
-
-            h6 {
-              font-weight: 700;
-              color: $white;
-            }
-          }
-
-          &::before {
-            position: absolute;
-            content: "";
-            width: 58px;
-            border-bottom: 2px solid $black;
-            left: 42px;
-          }
-        }
+      .third {
+        font-size: 20px !important;
+        left: 112px !important;
+        top: 200px !important;
       }
 
-      .info {
-        padding-bottom: 13px;
-        position: relative;
-        bottom: 70px;
+      .shop-now {
+        left: 210px !important;
+        bottom: 100px !important;
+      }
+
+      .navi-buttons {
+        bottom: 36px !important;
       }
     }
   }
+}
 
-  .highlighted-product {
-    max-width: 750px;
-    width: 100%;
-    height: 505px;
-    position: relative;
+@media (max-width: 576px) {
+  .promoted-box {
+    padding-right: 10px;
+    padding-left: 10px;
 
-    .products-carousel {
-      height: 505px;
-    }
+    .highlighted-product {
+      .products-carousel {
+        .carousel-cell {
+          width: 100%;
 
-    .title {
-      max-width: 750px;
-      width: 100%;
-      height: 215px;
-      opacity: 0.5;
-      position: relative;
-      bottom: 355px;
-      color: $white;
-      background-color: $black;
-    }
-
-    h1 {
-      font-size: 54px;
-      font-weight: 200;
-      position: absolute;
-      top: 210px;
-      left: 116px;
-      color: $white;
-    }
-
-    .shop-now {
-      width: 136px;
-      height: 54px;
-      border: none;
-      border-radius: 2px;
-      position: absolute;
-      left: 311px;
-      bottom: 126px;
-      cursor: pointer;
-      outline: none;
-      font-weight: 600;
-
-      &:active {
-        background-color: $primary;
-        color: $white;
-      }
-    }
-
-    .second {
-      font-weight: 600;
-      position: absolute;
-      left: 334px;
-      letter-spacing: 2px;
-    }
-
-    .third {
-      font-size: 24px;
-      color: $white;
-      position: absolute;
-      left: 182px;
-      top: 272px;
-      font-weight: 200;
-      letter-spacing: 0.5px;
-    }
-
-    .navi-buttons {
-      display: flex;
-      width: 750px;
-      height: 40px;
-      position: absolute;
-      left: 0;
-      bottom: -2px;
-
-      .arrow {
-        font-size: 26px;
-        display: inline;
-        height: inherit;
-        width: 375px;
-        border: none;
-        background-color: $footer-claim-bg;
-        color: $white;
-        cursor: pointer;
-        outline: none;
-
-        &:hover {
-          background-color: $primary;
+          img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+          }
         }
+      }
+
+      h1 {
+        left: calc(100vw / 10) !important;
+        font-size: 35px !important;
+      }
+
+      .second {
+        left: 187px !important;
+      }
+
+      .third {
+        font-size: 17px !important;
+        left: 66px !important;
+      }
+
+      .shop-now {
+        left: calc(100vw / 3) !important;
       }
     }
   }
