--- a/src/sass/components/_section--promoted.scss
+++ b/src/sass/components/_section--promoted.scss
@@ -31,18 +31,190 @@
       .hot-deals-carousel {
         .flickity-viewport {
           height: 457px !important;
-        }
 
-        .flickity-page-dots .dot {
-          display: inline-block;
-          width: 13px;
-          height: 13px;
-          margin: 0;
-          margin-right: 8px;
-          background: #e2e2e2;
-          border-radius: 50%;
-          opacity: 0.25;
-          cursor: pointer;
+          .flickity-slider {
+            .images {
+              width: 100%;
+              max-width: 360px;
+              height: 100%;
+              max-height: 458px;
+              position: relative;
+              border: 1px solid $promoted-line-grey;
+
+              img {
+                width: 358px;
+                height: 290px;
+              }
+
+              &:hover {
+                .add-to-cart,
+                .counter {
+                  opacity: 1;
+                }
+              }
+
+              .add-to-cart {
+                display: flex;
+                align-items: center;
+                justify-content: space-around;
+                height: 37px;
+                width: 132px;
+                background-color: $footer-claim-bg;
+                color: $white;
+                font-size: 13px;
+                position: absolute;
+                left: 112px;
+                top: 95px;
+                cursor: pointer;
+                opacity: 0;
+                transition-duration: 0.2s;
+
+                p {
+                  margin: 0;
+                  font-weight: 500;
+                }
+
+                i {
+                  font-size: 16px;
+                }
+              }
+
+              .counter {
+                justify-content: space-around;
+                padding: 0 38px;
+                position: relative;
+                bottom: 83px;
+                opacity: 0;
+                transition-duration: 0.2s;
+
+                .circle {
+                  background-color: $promoted-counter;
+                  width: 70px;
+                  height: 70px;
+                  border-radius: 50px;
+                  color: $white;
+                  text-align: center;
+                  cursor: default;
+
+                  h4 {
+                    width: 100%;
+                    font-size: 24px;
+                    font-weight: 600;
+                    padding-top: 12px;
+                    margin: 0;
+                  }
+
+                  h6 {
+                    font-size: 13px;
+                    font-weight: 600;
+                  }
+                }
+              }
+            }
+
+            .title {
+              margin: 0 0 18px 0;
+              font-weight: 500;
+              padding-top: 18px;
+            }
+
+            .stars-line {
+              justify-content: center;
+
+              i {
+                padding-right: 2px;
+              }
+
+              .far {
+                color: $promoted-icon-grey;
+              }
+
+              .fas {
+                color: $black;
+              }
+            }
+
+            .line {
+              border-bottom: 1px solid $promoted-counter;
+              margin: 20px 15px;
+              position: relative;
+
+              &:before {
+                content: "";
+                position: absolute;
+                width: 30px;
+                left: 146px;
+                top: -2px;
+                border-bottom: 5px solid $primary;
+              }
+            }
+
+            .price-line {
+              display: flex;
+              justify-content: space-between;
+
+              .icons {
+                display: flex;
+                padding-right: 0;
+
+                .icon-box {
+                  display: flex;
+                  justify-content: center;
+                  align-items: center;
+                  height: 37px;
+                  width: 37px;
+                  border: 1px solid $black;
+                  margin-right: 7px;
+                  cursor: pointer;
+                  transition-duration: 0.2s;
+
+                  &:hover {
+                    background-color: $primary;
+                    border-color: $primary;
+                    color: $white;
+                  }
+                }
+              }
+
+              .prices {
+                display: flex;
+                align-items: center;
+                justify-content: flex-end;
+
+                h6 {
+                  margin: 0;
+                  font-size: 18px;
+                  font-weight: 400;
+                  color: $promoted-icon-grey;
+                }
+
+                .actual-price {
+                  background-color: $promoted-counter;
+                  padding: 8px;
+                  margin-left: 5px;
+
+                  h6 {
+                    font-weight: 700;
+                    color: $white;
+                  }
+                }
+
+                &::before {
+                  position: absolute;
+                  content: "";
+                  width: 58px;
+                  border-bottom: 2px solid $black;
+                  left: 42px;
+                }
+              }
+            }
+
+            .info {
+              padding-bottom: 13px;
+              position: relative;
+              bottom: 70px;
+            }
+          }
         }
 
         .flickity-page-dots {
@@ -56,193 +228,23 @@
           line-height: 1;
           right: -133px;
           top: -33px;
-        }
 
-        .flickity-page-dots .dot.is-selected {
-          opacity: 1 !important;
-          background-color: $primary !important;
-        }
-
-        .images {
-          width: 100%;
-          max-width: 360px;
-          height: 100%;
-          max-height: 458px;
-          position: relative;
-          border: 1px solid $promoted-line-grey;
-
-          img {
-            width: 358px;
-            height: 290px;
-          }
-
-          &:hover {
-            .add-to-cart,
-            .counter {
-              opacity: 1;
-            }
-          }
-
-          .add-to-cart {
-            display: flex;
-            align-items: center;
-            justify-content: space-around;
-            height: 37px;
-            width: 132px;
-            background-color: $footer-claim-bg;
-            color: $white;
-            font-size: 13px;
-            position: absolute;
-            left: 112px;
-            top: 95px;
+          .dot {
+            display: inline-block;
+            width: 13px;
+            height: 13px;
+            margin: 0;
+            margin-right: 8px;
+            background: #e2e2e2;
+            border-radius: 50%;
+            opacity: 0.25;
             cursor: pointer;
-            opacity: 0;
-            transition-duration: 0.2s;
-
-            p {
-              margin: 0;
-              font-weight: 500;
-            }
-
-            i {
-              font-size: 16px;
-            }
           }
 
-          .counter {
-            justify-content: space-around;
-            padding: 0 38px;
-            position: relative;
-            bottom: 83px;
-            opacity: 0;
-            transition-duration: 0.2s;
-
-            .circle {
-              background-color: $promoted-counter;
-              width: 70px;
-              height: 70px;
-              border-radius: 50px;
-              color: $white;
-              text-align: center;
-              cursor: default;
-
-              h4 {
-                width: 100%;
-                font-size: 24px;
-                font-weight: 600;
-                padding-top: 12px;
-                margin: 0;
-              }
-
-              h6 {
-                font-size: 13px;
-                font-weight: 600;
-              }
-            }
+          .is-selected {
+            opacity: 1;
+            background-color: $primary;
           }
-        }
-
-        .title {
-          margin: 0 0 18px 0;
-          font-weight: 500;
-          padding-top: 18px;
-        }
-
-        .stars-line {
-          justify-content: center;
-
-          i {
-            padding-right: 2px;
-          }
-
-          .far {
-            color: $promoted-icon-grey;
-          }
-
-          .fas {
-            color: $black;
-          }
-        }
-
-        .line {
-          border-bottom: 1px solid $promoted-counter;
-          margin: 20px 15px;
-          position: relative;
-
-          &:before {
-            content: "";
-            position: absolute;
-            width: 30px;
-            left: 146px;
-            top: -2px;
-            border-bottom: 5px solid $primary;
-          }
-        }
-
-        .price-line {
-          display: flex;
-          justify-content: space-between;
-
-          .icons {
-            display: flex;
-            padding-right: 0;
-
-            .icon-box {
-              display: flex;
-              justify-content: center;
-              align-items: center;
-              height: 37px;
-              width: 37px;
-              border: 1px solid $black;
-              margin-right: 7px;
-              cursor: pointer;
-              transition-duration: 0.2s;
-
-              &:hover {
-                background-color: $primary;
-                border-color: $primary;
-                color: $white;
-              }
-            }
-          }
-
-          .prices {
-            display: flex;
-            align-items: center;
-            justify-content: flex-end;
-
-            h6 {
-              margin: 0;
-              font-size: 18px;
-              font-weight: 400;
-              color: $promoted-icon-grey;
-            }
-
-            .actual-price {
-              background-color: $promoted-counter;
-              padding: 8px;
-              margin-left: 5px;
-
-              h6 {
-                font-weight: 700;
-                color: $white;
-              }
-            }
-
-            &::before {
-              position: absolute;
-              content: "";
-              width: 58px;
-              border-bottom: 2px solid $black;
-              left: 42px;
-            }
-          }
-        }
-
-        .info {
-          padding-bottom: 13px;
-          position: relative;
-          bottom: 70px;
         }
       }
     }
@@ -253,17 +255,10 @@
       height: 505px;
       position: relative;
 
-      .products-carousel,
-      .products-carousel-mobile {
-        height: 505px;
-
+      .products-carousel {
         .flickity-viewport {
           height: 500px !important;
         }
-      }
-
-      .products-carousel-mobile {
-        display: none;
       }
 
       .title {
@@ -351,55 +346,49 @@
 }
 
 @media (min-width: 992px) and (max-width: 1199px) {
-  .promoted-box {
-    .hot-deals {
-      max-width: 330px !important;
-      width: 100%;
+  .correctPadding {
+    .promoted-box {
+      .hot-deals {
+        max-width: 330px;
+        width: 100%;
 
-      .hot-deals-header {
-        p {
-          padding-left: 10px !important;
-        }
-      }
-
-      .hot-deals-carousel {
-        .flickity-viewport {
-          height: 457px !important;
+        .hot-deals-header {
+          p {
+            padding-left: 10px;
+          }
         }
 
-        .images {
-          img {
-            width: 330px !important;
+        .hot-deals-carousel {
+          .flickity-viewport {
+            .flickity-slider {
+              .images {
+                img {
+                  width: 330px;
+                }
+              }
+            }
           }
         }
       }
-    }
 
-    .highlighted-product {
-      max-width: 630px !important;
+      .highlighted-product {
+        max-width: 630px;
 
-      .title {
-        max-width: 630px !important;
-      }
+        h1 {
+          left: 58px;
+        }
 
-      h1 {
-        left: 58px !important;
-      }
+        .second {
+          left: 276px;
+        }
 
-      .second {
-        left: 276px !important;
-      }
+        .third {
+          left: 133px;
+        }
 
-      .third {
-        left: 133px !important;
-      }
-
-      .shop-now {
-        left: 256px !important;
-      }
-
-      .navi-buttons {
-        max-width: 630px !important;
+        .shop-now {
+          left: 256px;
+        }
       }
     }
   }
@@ -410,122 +399,109 @@
     .hot-deals {
       display: none;
     }
-
-    .highlighted-product {
-      .products-carousel-mobile {
-        display: block !important;
-      }
-
-      .products-carousel {
-        display: none;
-      }
-    }
   }
 }
 
 @media (max-width: 767px) {
-  .promoted-box {
-    .hot-deals {
-      display: none;
-    }
-
-    .highlighted-product {
-      height: 398px !important;
-
-      .products-carousel {
+  .correctPadding {
+    .promoted-box {
+      .hot-deals {
         display: none;
       }
 
-      .products-carousel-mobile {
-        display: block !important;
-        height: 362px !important;
+      .highlighted-product {
+        height: 398px;
 
-        .carousel-cell {
-          width: 100%;
-          height: 352px;
+        .products-carousel {
+          height: 362px;
 
-          img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
+          .flickity-viewport {
+            height: 352px !important;
+
+            .carousel-cell {
+              width: 100%;
+              height: 352px;
+
+              img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+              }
+            }
           }
         }
-      }
 
-      .title {
-        height: 168px !important;
-        bottom: 260px !important;
-      }
+        .title {
+          height: 168px;
+          bottom: 260px;
+        }
 
-      h1 {
-        left: 66px !important;
-        top: 145px !important;
-        font-size: 40px !important;
-      }
+        h1 {
+          left: 66px;
+          top: 145px;
+          font-size: 40px;
+        }
 
-      .second {
-        left: 240px !important;
-        top: 145px !important;
-      }
+        .second {
+          left: 240px;
+          top: 145px;
+        }
 
-      .third {
-        font-size: 20px !important;
-        left: 112px !important;
-        top: 200px !important;
-      }
+        .third {
+          font-size: 20px;
+          left: 112px;
+          top: 200px;
+        }
 
-      .shop-now {
-        left: 210px !important;
-        bottom: 100px !important;
-      }
+        .shop-now {
+          left: 210px;
+          bottom: 100px;
+        }
 
-      .navi-buttons {
-        bottom: 36px !important;
+        .navi-buttons {
+          bottom: 36px;
+        }
       }
     }
   }
 }
 
 @media (max-width: 576px) {
-  .promoted-box {
-    padding-right: 10px;
-    padding-left: 10px;
+  .correctPadding {
+    .promoted-box {
+      padding-right: 10px;
+      padding-left: 10px;
 
-    .highlighted-product {
-      .products-carousel {
-        display: none;
-      }
-
-      .products-carousel-mobile {
-        display: block;
-
-        .carousel-cell {
-          width: 100%;
-
-          img {
+      .highlighted-product {
+        .products-carousel {
+          .carousel-cell {
             width: 100%;
-            height: 100%;
-            object-fit: cover;
+
+            img {
+              width: 100%;
+              height: 100%;
+              object-fit: cover;
+            }
           }
         }
-      }
 
-      h1 {
-        left: calc(100vw / 10) !important;
-        font-size: 35px !important;
-      }
+        h1 {
+          left: calc(100vw / 10);
+          font-size: 35px;
+        }
 
-      .second {
-        left: 187px !important;
-      }
+        .second {
+          left: 187px;
+        }
 
-      .third {
-        font-size: 17px !important;
-        left: 66px !important;
-      }
+        .third {
+          font-size: 17px;
+          left: 66px;
+        }
 
-      .shop-now {
-        left: calc(100vw / 3) !important;
+        .shop-now {
+          left: calc(100vw / 3);
+        }
       }
     }
   }
