--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -207,12 +207,29 @@ header {
                 height: fit-content;
                 border: 1px solid $form-border-color;
                 border-top: none;
+                &:hover {
+                  a {
+                    color: white;
+                  }
+                }
+                a {
+                  &:hover {
+                    text-decoration: none;
+                  }
+                }
               }
             }
             &:hover {
               ul {
                 display: block;
                 z-index: 10;
+              }
+            }
+            &:hover {
+              background-color: #dca35b;
+              color: white;
+              i:first-child {
+                color: white;
               }
             }
           }
